--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "draftlog": "^1.0.12",
-    "xml2js": "^0.4.4"
+    "xml2js": "^0.4.4",
+    "xmlhttprequest": "^1.8.0"
   }
 }
